# datascience-starter

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreateCommand.sh
src/: main.ipynb
