[tool.poetry]
name        = "datascience-starter"
description = "datascience-starter"
keywords    = ["datascience", "starter"]
version     = "0.0.0"
readme      = "README.md"
authors     = ["Sebastian Berg <sebastian.berg@handarel.dev>"]

[tool.poetry.dependencies]
python     = "~3.12"
httpx      = { extras = ["cli", "http2"], version = "^0.25.2" }
jupyter    = "^1.0.0"
matplotlib = "^3.8.2"
numpy      = "^1.26.2"
pandas     = "^2.1.3"
pydantic   = { extras = ["email"], version = "^2.5.2" }
seaborn    = "^0.13.0"

[tool.ruff]
target-version = "py312"
line-length    = 100
indent-width   = 4

[tool.ruff.format]
line-ending               = "auto"
quote-style               = "single"
indent-style              = "space"
skip-magic-trailing-comma = false


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
